--- a/views/addStock.ejs
+++ b/views/addStock.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/stylesignup.css" />
     <title>Add Stock</title>
   </head>
+  <%- include('./partials/tracker') %>
   <body>
     <main>
       <h1 style="display: flex;justify-content: center;">Add Items</h1>
