--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../img/Logo_Byte.png" type="image/png">
     <title>Byte Zone</title>
   </head>
+  <%- include('./partials/tracker') %>
   <body>
     <%- include('./partials/navbar') %>
     <header class="intro">
@@ -14,7 +15,7 @@
         <h1>Byte Zone</h1>
         <p>One of the world's leading tech store</p>
       </section>
-      <img src="../img/Logo_Byte.png" alt="byte zone logo">
+      <img loading="lazy" src="../img/Logo_Byte.png" alt="byte zone logo">
     </header>
     <%- include('./partials/footer') %>
     <%- include("./partials/scripts") %>
