added meta description, keyword

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="ByteZone: Your one-stop shop for all your computing needs. Discover a wide range of desktops, laptops, and accessories at competitive prices. Find the perfect tech for work, play, and everything in between.">
+    <meta name="keywords" content="desktops, laptops, computers, accessories, electronics, gaming, business, online shopping, tech deals, bytezone">
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/stylesignup.css" />
     <link rel="shortcut icon" href="../img/Logo_Byte.png" type="image/png" />
